<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vandenrobotics.functionfirst.activities.ScoutActivity"
    android:background="@color/DarkGreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ScoutInformation"
        android:id="@+id/textViewSpinnerInfo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Gold"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_promptSpinnerDevice"
        android:id="@+id/textView"
        android:layout_below="@+id/textViewSpinnerInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textColor="@color/Gold" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDeviceNumber"
        android:prompt="@string/text_promptSpinnerDevice"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_promptSpinnerMatch"
        android:id="@+id/textView2"
        android:layout_below="@+id/spinnerDeviceNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Gold"
        android:textSize="16sp" />


    <com.vandenrobotics.functionfirst.views.NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pickerMatch"
        android:textColor="@color/White"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_promptSpinnerTeam"
        android:id="@+id/textView3"
        android:textSize="16sp"
        android:textColor="@color/Gold"
        android:layout_below="@+id/pickerMatch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTeamNumber"
        android:prompt="@string/text_promptSpinnerTeam"
        android:layout_below="@+id/textView3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_startMatch"
        android:id="@+id/button_startMatch"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Gold"
        android:onClick="activityMatch"
        android:textSize="24sp" />

</RelativeLayout>
