<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TeleFragment"
    android:background="@color/DarkGreen">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/pickerViewTele"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_totesFromChute"
                    android:id="@+id/textTotesFromChute"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/Gold" />

                <com.vandenrobotics.functionfirst.views.NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickerTotesFromChute"
                    android:layout_below="@+id/textTotesFromChute"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_litterFromChute"
                    android:id="@+id/textLitterFromChute"
                    android:layout_below="@+id/pickerTotesFromChute"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/Gold" />

                <com.vandenrobotics.functionfirst.views.NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickerLitterFromChute"
                    android:layout_below="@+id/textLitterFromChute"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_totesFromLandfill"
                    android:id="@+id/textTotesFromLandfillTele"
                    android:layout_below="@+id/pickerLitterFromChute"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/Gold" />

                <com.vandenrobotics.functionfirst.views.NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickerTotesFromLandfillTele"
                    android:layout_below="@+id/textTotesFromLandfillTele"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_litterToLandfill"
                    android:id="@+id/textLitterToLandfill"
                    android:layout_below="@+id/pickerTotesFromLandfillTele"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/Gold" />

                <com.vandenrobotics.functionfirst.views.NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pickerLitterToLandfill"
                    android:layout_below="@+id/textLitterToLandfill"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.vandenrobotics.functionfirst.views.FieldDiagram
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:id="@+id/fieldDiagram"
        android:src="@drawable/field_diagram_red"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:keepScreenOn="true"
        android:layout_toRightOf="@+id/pickerViewTele"
        android:layout_toEndOf="@+id/pickerViewTele" />

</RelativeLayout>
